local-services/postgres/prod/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
subsets:
- addresses:
  - ip: 192.168.1.32
  ports:
  - port: 5432
    protocol: TCP
