local-services/postgres/prod/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
