local-services/postgres/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    name: postgres-ingress
  name: postgres-ingress
spec:
  ingressClassName: public
  rules:
  - host: postgres.kristoffer.codes
    http:
      paths:
      - backend:
          service:
            name: postgres
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - postgres.kristoffer.codes
    secretName: postgres-tls-cert
